--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# harhat
+.states
+/cache
+/artifacts
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
+/coverage
+/coverage.json
+
 # Logs
 logs
 *.log
