--- a/package.json
+++ b/package.json
@@ -18,20 +18,19 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/3DotsHub/hub-manager"
+		"url": "git+https://github.com/samclassix/frankencoin-utils"
 	},
 	"keywords": [],
 	"bugs": {
-		"url": "https://github.com/3DotsHub/hub-manager/issues"
+		"url": "https://github.com/samclassix/frankencoin-utils/issues"
 	},
-	"homepage": "https://github.com/3DotsHub/hub-manager#readme",
+	"homepage": "https://github.com/samclassix/frankencoin-utils#readme",
 	"devDependencies": {
 		"@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
 		"@nomicfoundation/hardhat-ethers": "^3.0.4",
 		"@nomicfoundation/hardhat-network-helpers": "^1.0.9",
 		"@nomicfoundation/hardhat-toolbox": "^3.0.0",
 		"@nomicfoundation/hardhat-verify": "^1.1.1",
-		"@openzeppelin/contracts": "^5.0.2",
 		"@typechain/hardhat": "^9.0.0",
 		"@types/chai": "^4.3.6",
 		"@types/mocha": "^10.0.1",
@@ -46,6 +45,9 @@
 		"tsc-watch": "^6.2.0"
 	},
 	"dependencies": {
+		"@openzeppelin/contracts": "^5.0.2",
+		"@uniswap/v3-core": "^1.0.1",
+		"@uniswap/v3-periphery": "^1.4.4",
 		"@typechain/ethers-v6": "^0.5.0",
 		"hardhat": "^2.22.10",
 		"hardhat-abi-exporter": "^2.10.0",
