--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"license": "MIT",
 	"main": "index.ts",
 	"author": "samclassix <samclassix@proton.me>",
-	"description": "Frankencoin Ecosystem helpers and utils",
+	"description": "Frankencoin Ecosystem Utils",
 	"directories": {
 		"doc": "docs",
 		"test": "tests"
