--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"compile": "npx hardhat compile",
 		"test": "npx hardhat test",
 		"coverage": "npx hardhat coverage",
-		"publish": "npm publish --access public"
+		"publish": "npm publish --access public",
+		"wallet:info": "npx ts-node helper/printWalletInfo.ts"
 	},
 	"repository": {
 		"type": "git",
@@ -27,22 +28,25 @@
 	"homepage": "https://github.com/samclassix/frankencoin-utils#readme",
 	"devDependencies": {
 		"@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
-		"@nomicfoundation/hardhat-ethers": "^3.0.4",
+		"@nomicfoundation/hardhat-ethers": "^3.0.8",
+		"@nomicfoundation/hardhat-ignition": "^0.15.6",
+		"@nomicfoundation/hardhat-ignition-ethers": "^0.15.6",
 		"@nomicfoundation/hardhat-network-helpers": "^1.0.9",
 		"@nomicfoundation/hardhat-toolbox": "^3.0.0",
-		"@nomicfoundation/hardhat-verify": "^1.1.1",
+		"@nomicfoundation/hardhat-verify": "^2.0.11",
+		"@nomicfoundation/ignition-core": "^0.15.6",
 		"@typechain/hardhat": "^9.0.0",
 		"@types/chai": "^4.3.6",
 		"@types/mocha": "^10.0.1",
 		"chai": "^4.3.8",
 		"dotenv": "^16.3.1",
-		"ethers": "^6.7.1",
+		"ethers": "^6.13.2",
 		"hardhat-deploy": "^0.11.37",
 		"hardhat-gas-reporter": "^1.0.9",
 		"mocha": "^10.7.0",
 		"solidity-coverage": "^0.8.4",
 		"tsc-watch": "^6.2.0",
-		"viem": "^2.17.8"
+		"viem": "^2.21.16"
 	},
 	"dependencies": {
 		"@openzeppelin/contracts": "3.4.2",
@@ -55,6 +59,6 @@
 		"prompt": "^1.3.0",
 		"ts-node": "^10.9.1",
 		"typechain": "^8.3.1",
-		"typescript": "^5.2.2"
+		"typescript": "^5.6.2"
 	}
 }
